markdown gaussian and knn

--- a/notebooks/gaussian_discriminant_analysis.ipynb
+++ b/notebooks/gaussian_discriminant_analysis.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análise de Discriminante Gaussiano\n",
+    "\n",
+    "Considera que os dados foram gerados a partir de uma distribuição Gaussiana com média $\\mu$ e variância $\\sigma^2$.\n",
+    "\n",
+    "\n",
+    "Predição feita da seguinte forma: $p(Ck |x) ∝ p(x|Ck )p(Ck ), k ∈ {1, 2} $\n",
+    "\n",
+    "Sendo $p(x|Ck ) = N (μk , Σk ), k ∈ {1, 2}$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,6 +25,13 @@
     "\n",
     "from models.utils import accuracy, cross_validate\n",
     "from models.gaussian_discriminant_analysis.gaussian_discriminant_analysis import GaussianDiscriminantAnalysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Holdout "
    ]
   },
   {
@@ -56,26 +77,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(114,)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predict.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -95,6 +96,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Folds"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -103,23 +111,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média Acurácia: 0.9136, Desvio Padrão: 0.0746\n",
-      "Média F1-Score: 0.9329, Desvio Padrão: 0.0566\n",
-      "Média Recall: 0.9635, Desvio Padrão: 0.0564\n",
-      "Média Precisão: 0.9123, Desvio Padrão: 0.0986\n"
+      "Média Acurácia: 0.9542, Desvio Padrão: 0.0296\n",
+      "Média F1-Score: 0.9633, Desvio Padrão: 0.0241\n",
+      "Média Recall: 0.9612, Desvio Padrão: 0.0221\n",
+      "Média Precisão: 0.9660, Desvio Padrão: 0.0351\n"
      ]
     }
    ],
    "source": [
-    "cross_validate(model, X_test, y_test)"
+    "cross_validate(model, X, y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
