--- a/notebooks/gaussian_naive_bayes.ipynb
+++ b/notebooks/gaussian_naive_bayes.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Naive Bayes Gaussiano\n",
+    "\n",
+    "Se comporta como um Discriminante Gaussiano com matriz de covariância diagonal, ou seja, leva em consideração que os atributos são independentes.\n",
+    "\n",
+    "predição:\n",
+    "\n",
+    "![Texto alternativo](../references/naive%20bayes%20gaussian.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,6 +24,13 @@
     "\n",
     "from models.utils import accuracy, cross_validate\n",
     "from models.gaussian_naive_bayes.gaussian_naive_bayes import GaussianNaiveBayes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Holdout"
    ]
   },
   {
@@ -75,6 +95,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Folds"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -83,23 +110,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média Acurácia: 0.9136, Desvio Padrão: 0.0850\n",
-      "Média F1-Score: 0.9337, Desvio Padrão: 0.0659\n",
-      "Média Recall: 0.9565, Desvio Padrão: 0.0670\n",
-      "Média Precisão: 0.9186, Desvio Padrão: 0.0958\n"
+      "Média Acurácia: 0.9331, Desvio Padrão: 0.0406\n",
+      "Média F1-Score: 0.9479, Desvio Padrão: 0.0305\n",
+      "Média Recall: 0.9575, Desvio Padrão: 0.0385\n",
+      "Média Precisão: 0.9408, Desvio Padrão: 0.0497\n"
      ]
     }
    ],
    "source": [
-    "cross_validate(model=model, X=X_test, y=y_test)"
+    "cross_validate(model=model, X=X, y=y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
