--- a/notebooks/knn.ipynb
+++ b/notebooks/knn.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Knn\n",
+    "\n",
+    "É um modelo não paramétrico, ou seja, não há parâmetros a serem ajustados. Ele é capaz de prever o rótulo de uma nova amostra, a partir de amostras de treinamento.\n",
+    "\n",
+    "Usa distancia euclidiana para calcular a distância entre as amostras.\n",
+    "\n",
+    "![Texto alternativo](../references/knn.png)\n",
+    "\n",
+    "predição:\n",
+    "\n",
+    "![Texto alternativo](../references/pred_knn.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +31,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Holdout"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +99,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Folds"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -83,23 +114,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média Acurácia: 0.9129, Desvio Padrão: 0.0865\n",
-      "Média F1-Score: 0.9306, Desvio Padrão: 0.0706\n",
-      "Média Recall: 0.9667, Desvio Padrão: 0.0667\n",
-      "Média Precisão: 0.9019, Desvio Padrão: 0.0947\n"
+      "Média Acurácia: 0.9243, Desvio Padrão: 0.0343\n",
+      "Média F1-Score: 0.9398, Desvio Padrão: 0.0286\n",
+      "Média Recall: 0.9550, Desvio Padrão: 0.0142\n",
+      "Média Precisão: 0.9264, Desvio Padrão: 0.0504\n"
      ]
     }
    ],
    "source": [
-    "cross_validate(model, X_test, y_test)"
+    "cross_validate(model, X, y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
