decision tree and svm

--- a/notebooks/gaussian_discriminant_analysis.ipynb
+++ b/notebooks/gaussian_discriminant_analysis.ipynb
@@ -4,14 +4,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Análise de Discriminante Gaussiano\n",
+    "Árvores de Decisão com Índice de Gini\n",
+    "As árvores de decisão são algoritmos de aprendizado supervisionado amplamente usados para classificação e regressão. Neste modelo, os dados são divididos recursivamente em subgrupos com base em atributos preditores, utilizando métricas como o índice de Gini para avaliar a qualidade das divisões.\n",
     "\n",
-    "Considera que os dados foram gerados a partir de uma distribuição Gaussiana com média $\\mu$ e variância $\\sigma^2$.\n",
+    "Fórmula do Índice de Gini\n",
+    "O índice de Gini mede a impureza de um conjunto de dados. Quanto menor o índice, mais homogêneo é o conjunto. A fórmula é:\n",
     "\n",
+    "𝐺\n",
+    "=\n",
+    "1\n",
+    "−\n",
+    "∑\n",
+    "𝑘\n",
+    "𝑃\n",
+    "(\n",
+    "𝐶\n",
+    "𝑘\n",
+    ")\n",
+    "2\n",
+    "G=1− \n",
+    "k\n",
+    "∑\n",
+    "​\n",
+    " P(C \n",
+    "k\n",
+    "​\n",
+    " ) \n",
+    "2\n",
+    " \n",
+    "𝑃\n",
+    "(\n",
+    "𝐶\n",
+    "𝑘\n",
+    ")\n",
+    "P(C \n",
+    "k\n",
+    "​\n",
+    " ): Proporção de amostras pertencentes à classe \n",
+    "𝐶\n",
+    "𝑘\n",
+    "C \n",
+    "k\n",
+    "​\n",
+    "  em um grupo específico.\n",
+    "𝑘\n",
+    "k: Classes possíveis no conjunto.\n",
+    "Após uma divisão, o índice de Gini médio ponderado das ramificações é calculado:\n",
     "\n",
-    "Predição feita da seguinte forma: $p(Ck |x) ∝ p(x|Ck )p(Ck ), k ∈ {1, 2} $\n",
-    "\n",
-    "Sendo $p(x|Ck ) = N (μk , Σk ), k ∈ {1, 2}$."
+    "𝐺\n",
+    "m\n",
+    "e\n",
+    "ˊ\n",
+    "dio\n",
+    "=\n",
+    "∣\n",
+    "𝐺\n",
+    "esquerda\n",
+    "∣\n",
+    "𝑁\n",
+    "𝐺\n",
+    "esquerda\n",
+    "+\n",
+    "∣\n",
+    "𝐺\n",
+    "direita\n",
+    "∣\n",
+    "𝑁\n",
+    "𝐺\n",
+    "direita\n",
+    "G \n",
+    "m \n",
+    "e\n",
+    "ˊ\n",
+    " dio\n",
+    "​\n",
+    " = \n",
+    "N\n",
+    "∣G \n",
+    "esquerda\n",
+    "​\n",
+    " ∣\n",
+    "​\n",
+    " G \n",
+    "esquerda\n",
+    "​\n",
+    " + \n",
+    "N\n",
+    "∣G \n",
+    "direita\n",
+    "​\n",
+    " ∣\n",
+    "​\n",
+    " G \n",
+    "direita\n",
+    "​\n",
+    " \n",
+    "𝑁\n",
+    "N: Número total de amostras no nó atual."
    ]
   },
   {
